scss/main.scss
$green: #235b27;
$black: #333;
html {
  font-size: 20px;
}

body {
  color: $black;
  background: white;
  font-size: 20px;
  padding: 0;
  margin: 0;
  line-height: 1.6;
  font-family: Georgia, 'Times New Roman', Times, serif;
}

.container {
  max-width: 58rem;
  padding: 0 2rem;
  margin: 0 auto;
}

ol {
  li {
    margin-bottom: 1rem;
  }
}

a {
  color: $green;
  text-decoration: underline;
  &:hover {
    color: #000;
    text-decoration: none;
  }
}

.btn {
  display: inline-block;
  background-color: $green;
  color: white;
  padding: 10px 20px;
  font-weight: bold;
  border-radius: 5px;
  border: 0;
  font: inherit;
  &:hover, &:focus {
    background: greenyellow;
    color: $black;
    cursor: pointer;
  }

  &.btn--subtle {
    background-color: lightgray;
    color: $black;
    &:hover, &:focus {
      background: rgba(143, 164, 149, .5);
      color: $black;
    }
  }
}

.header {
  background: #235b27;
  color: #fff;
  padding: 2rem 0;
  .header__layout {
    @extend .container;
    display: flex;
    justify-content: space-between;
  }
  .header__nav {
    ul {
      list-style-type: none;
      padding: 0;
    }
    li {
      display: inline-block;
      margin-left: 2rem;
    }
  }
  a {
    color: #fff;
    display: inline-block;
    padding: 10px;
    text-decoration: none;
    border-bottom: 4px solid #064109;
    &.current {
      border-bottom: 4px solid;
    }
    &:hover, &:focus {
      text-decoration: none;
      border-bottom: 4px solid;
    }
  }
}

.footer {
  background: $green;
  color: white;
  font-size: 0.8rem;
  padding: 3rem;
  @media screen and (min-width: 800px) {
    display: flex;
    justify-content: space-between;
  }
  p {
    margin: 1rem 0;
  }
  ul {
    list-style-type: none;
    padding: 0;
    margin: 1rem 0;
    li {
      display: inline-block;
    }
  }
  a {
    border: 2px solid transparent;
    color: #fff;
    display: inline-block;
    text-decoration: underline;
    padding: 4px;
    &:hover, &:focus {
      text-decoration: none;
      border: 2px solid white;
    }
  }
  .footer__school-logo {
    background: url(/images/Dunton-Green-Primary-School.png) no-repeat;
    background-size: 100% auto;
    width: 320px;
    height: 80px;
    text-indent: -99999em;
  }
}

.item_list {
  list-style-type: none;
  padding: 0;
  margin: 0 0 1em;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  .item_list__item {
    width: 100%;
    margin: 0 0 2em;
    @media (min-width: 400px) {
      width: 47%;
    }
    @media (min-width: 800px) {
      max-width: 30%;
    }
  }
}

.item {
  background: #eaeaea;
  .item__title {
    color: darkred;
    font-size: 1.4rem;
    margin: -40px 10px 10px 10px;
    z-index: 10;
    position: relative;
    background: white;
    padding: 0 10px;
  }
  .item__image-container {
    position: relative;
  }
  .item__value {
    background: rgb(174, 174, 0);
    color: $black;
    padding: 6px;
    display: inline-block;
    margin: 0;
    font-weight: bold;
    position: absolute;
    top: 0;
    right: 0;
  }
  .item__image {
    height: auto;
    width: 100%;
  }
  .btn {
    margin:10px;
  }
}

.item-detail {
  overflow: hidden;
  .item-detail__image {
    float: right;
    max-width: 45%;
    min-width: 40%;
  }
  .item__value {
    font-weight: 900;
    font-size: 1.2rem;
  }
}

.pagination {
  margin-top: 3rem;
  padding: 1rem 0;
  font-size: 0.9rem;
  border-top: 5px solid rgba(143, 164, 149, .5);
  ul {
    list-style-type: none;
    display: flex;
    margin: 1rem 0;
    padding: 0;
    justify-content: space-between;
    li {
      width: 100%;
      @media (min-width: 800px) {
        max-width: 46%;
      }

      &:nth-child(2) {
        text-align: right;
      }
    }
  }
}

.bid-form {
  max-width: 32rem;
}

.form-help {
  color: #666;
  font-size: 0.9rem;
}

legend {
  font-size: 1.4rem;
}

label {
  display: block;
  margin-bottom: 10px;
  &.label-inline {
    display: inline-block;
  }
}

.form-row {
  margin-bottom: 2rem;
}

input[type=text],
input[type=email],
input[type=number] {
  border: 1px solid #333;
  border-radius: 2px;
  padding: 5px 10px;
  background: white;
  color: $black;
  font: inherit;

  &.input-narrow {
    width: 120px;
  }
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    /* display: none; <- Crashes Chrome on hover */
    -webkit-appearance: none;
    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}

input[type=number] {
    -moz-appearance:textfield; /* Firefox */
}

.bid-amount {
  font-size: 1.2rem;
  padding: 1rem;
  background: #eaeaea;
}

